test/syc/bad/signedvoid.c
/*
 * Both signed and void specifier
 */

signed void *a;
